added spotless plugin